import("//llvm/utils/gn/build/toolchain/target_flags.gni")

declare_args() {
  # Specifies the serial number of the Android device to be used for testing.
  android_serial_for_testing = ""
}

target_flags_string = ""

extra_ld_flags = []
if (current_os != "mac") {
  extra_ld_flags += [ "-fuse-ld=lld" ]
}

foreach(flag, target_flags + target_ldflags + extra_ld_flags) {
  if (target_flags_string != "") {
    target_flags_string += " "
  }
  target_flags_string += flag
}
