import("//llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":lldb" ]
  args = [ "-gen-opt-parser-defs" ]
}

# XXX configure lldb-Info.plist.in, pass as sectcreate on maOS

executable("lldb") {
  configs += [ "//llvm/utils/gn/build:lldb_code" ]
  deps = [
    ":Options",
    "//lldb/include/lldb/Host:Config",
    "//lldb/source/API:liblldb",
    "//llvm/lib/Option",
    "//llvm/lib/Support",
    "//llvm/utils/gn/build/libs/xar",

    # FIXME: in the cmake build this comes in transitively via some Plugins dep
    "//llvm/lib/Target:TargetsToBuild",

    # FIXME: in the cmake build this comes in from elsewhere
    "//lldb/source/Plugins/ScriptInterpreter/None",
  ]
  sources = [
    "Driver.cpp",
    "Platform.cpp",
  ]
   # XXX if win -DIMPORT_LIBLLDB
   # XXX LLDB_BUILD_FRAMEWORK rpath stuff
}
