import("//llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":lldb-vscode" ]
  args = [ "-gen-opt-parser-defs" ]
}

executable("lldb-vscode") {
  configs += [ "//llvm/utils/gn/build:lldb_code" ]
  deps = [
    ":Options",
    "//lldb/source/API:liblldb",
    "//llvm/lib/Option",
    "//llvm/lib/Support",

    # FIXME: in the cmake build these come in from elsewhere
    # FIXME: also, don't duplicate this in driver and lldb-test and lldb-vscode
    "//lldb/source/Plugins/ABI/X86",
    "//lldb/source/Plugins/Disassembler/LLVMC",
    "//lldb/source/Plugins/DynamicLoader/MacOSX-DYLD",
    "//lldb/source/Plugins/DynamicLoader/POSIX-DYLD",
    "//lldb/source/Plugins/DynamicLoader/Static",
    "//lldb/source/Plugins/Instruction/ARM",
    "//lldb/source/Plugins/JITLoader/GDB",
    "//lldb/source/Plugins/Language/ObjCPlusPlus",
    "//lldb/source/Plugins/LanguageRuntime/CPlusPlus/ItaniumABI",
    "//lldb/source/Plugins/ObjectContainer/BSD-Archive",
    "//lldb/source/Plugins/ObjectContainer/Universal-Mach-O",
    "//lldb/source/Plugins/ObjectFile/Breakpad",
    "//lldb/source/Plugins/ObjectFile/ELF",
    "//lldb/source/Plugins/ObjectFile/Mach-O",
    "//lldb/source/Plugins/ObjectFile/PECOFF",
    "//lldb/source/Plugins/ObjectFile/wasm",
    "//lldb/source/Plugins/Platform/Windows",
    "//lldb/source/Plugins/Process/elf-core",
    "//lldb/source/Plugins/Process/mach-core",
    "//lldb/source/Plugins/Process/minidump",
    "//lldb/source/Plugins/ScriptInterpreter/None",
    "//lldb/source/Plugins/SymbolFile/Breakpad",
    "//lldb/source/Plugins/SymbolFile/Symtab",
    "//lldb/source/Plugins/SymbolVendor/ELF",
    "//lldb/source/Plugins/SymbolVendor/MacOSX",
    "//lldb/source/Plugins/SymbolVendor/wasm",
    "//lldb/source/Plugins/UnwindAssembly/InstEmulation",
    "//lldb/source/Plugins/UnwindAssembly/x86",
  ]
  # FIXME: link in //lldb/source/Host on Win (and netbsd)
  # FIXME: link in pthread
  # FIXME: process lldb-vscode-Info.plist.in and embed output via -sectcreate
  #        on macOS
  # FIXME: rpath/install_name stuff on macOS for framework on macOS

  sources = [
    "lldb-vscode.cpp",
    "BreakpointBase.cpp",
    "ExceptionBreakpoint.cpp",
    "FifoFiles.cpp",
    "FunctionBreakpoint.cpp",
    "IOStream.cpp",
    "JSONUtils.cpp",
    "LLDBUtils.cpp",
    "OutputRedirector.cpp",
    "ProgressEvent.cpp",
    "RunInTerminal.cpp",
    "SourceBreakpoint.cpp",
    "VSCode.cpp",
  ]
}
