static_library("objcxx") {
  output_name = "lldbHostMacOSXObjCXX"
  configs += [ "//llvm/utils/gn/build:lldb_code" ]
  deps = [
    "//llvm/lib/Support",
    "//lldb/source/Utility",
  ]
  include_dirs = [ "//lldb/source" ]  # Includes internal headers from Utility.
  cflags_objcc = [ "-fno-objc-exceptions" ]
  sources = [
    "Host.mm",
    "HostInfoMacOSX.mm",
    "HostThreadMacOSX.mm",
  ]
  frameworks = [
    "Foundation.framework",
    "CoreServices.framework",
    "Security.framework",
  ]
}
