static_library("MacOSX-DYLD") {
  output_name = "lldbPluginDynamicLoaderMacOSXDYLD"
  configs += [
    "//llvm/utils/gn/build:clang_code",
    "//llvm/utils/gn/build:lldb_code",
  ]
  deps = [
    "//lldb/source/Breakpoint",
    "//lldb/source/Core",
    "//lldb/source/Expression",
    "//lldb/source/Host",
    "//lldb/source/Symbol",
    "//lldb/source/Target",
    "//lldb/source/Utility",
    "//lldb/source/Plugins/TypeSystem/Clang",
    "//llvm/lib/Support",
  ]
  # Reaches into Plugins/LanguageRuntime/ObjC.
  include_dirs = [ "//lldb/source" ]
  sources = [
    "DynamicLoaderMacOSXDYLD.cpp",
    "DynamicLoaderMacOS.cpp",
    "DynamicLoaderDarwin.cpp",
  ]
}

