static_library("ClangCommon") {
  output_name = "lldbPluginClangCommon"
  configs += [
    "//llvm/utils/gn/build:clang_code",
    "//llvm/utils/gn/build:lldb_code",
  ]
  deps = [
    "//lldb/source/Core",
    "//lldb/source/Utility",
    "//llvm/lib/Support",
  ]
  #include_dirs = [ ".." ]
  sources = [ "ClangHighlighter.cpp" ]
}
