static_library("ObjCPlusPlus") {
  output_name = "lldbPluginObjCPlusPlusLanguage"
  configs += [
    #"//llvm/utils/gn/build:clang_code",
    "//llvm/utils/gn/build:lldb_code",
  ]
  deps = [
    "//lldb/source/Core",
    "//lldb/source/Target",
    "//lldb/source/Plugins/Language/ClangCommon",
  ]
  # Reaches into Plugins/Language/ClangCommon.
  include_dirs = [ "//lldb/source" ]
  sources = [ "ObjCPlusPlusLanguage.cpp" ]
}
