static_library("Mach-O") {
  output_name = "lldbPluginObjectFileMachO"
  configs += [ "//llvm/utils/gn/build:lldb_code" ]
  deps = [
    "//lldb/source/Core",
    "//lldb/source/Host",
    "//lldb/source/Symbol",
    "//lldb/source/Target",
    "//lldb/source/Utility",
    "//lldb/source/Plugins/Process/Utility",
    "//llvm/lib/Support",
  ]
  # Reaches into Plugins/Process/Utility.
  include_dirs = [ "//lldb/source" ]
  sources = [ "ObjectFileMachO.cpp" ]
}
