static_library("None") {
  output_name = "lldbPluginScriptInterpreterNone"
  configs += [ "//llvm/utils/gn/build:lldb_code" ]
  deps = [
    "//lldb/source/Core",
    "//lldb/source/Interpreter",
  ]
  # Uses source-relative includes for own headers.
  #include_dirs = [ "//lldb/source" ]
  sources = [ "ScriptInterpreterNone.cpp" ]
}


