static_library("ItaniumABI") {
  output_name = "lldbPluginCXXItaniumABI"
  configs += [
    "//llvm/utils/gn/build:clang_code",
    "//llvm/utils/gn/build:lldb_code",
  ]
  deps = [
    "//lldb/source/Breakpoint",
    "//lldb/source/Core",
    "//lldb/source/Interpreter",
    "//lldb/source/Symbol",
    "//lldb/source/Target",
    "//lldb/source/Plugins/LanguageRuntime/CPlusPlus",
    "//lldb/source/Plugins/TypeSystem/Clang",
  ]
  # Reaches into Plugins/LanguageRuntime/CPlusPlus.
  include_dirs = [ "//lldb/source" ]
  sources = [ "ItaniumABILanguageRuntime.cpp" ]
}
