static_library("ItaniumABI") {
  output_name = "lldbPluginCXXItaniumABI"
  configs += [ "//llvm/utils/gn/build:lldb_code" ]
  deps = [
    "//lldb/source/Breakpoint",
    "//lldb/source/Core",
    "//lldb/source/Interpreter",
    "//lldb/source/Symbol",
    "//lldb/source/Target",
    "//lldb/source/Plugin/LanguageRuntime/CPlusPlus",
    "//lldb/source/Plugins/TypeSystem/Clang",
  ]
  #include_dirs = [ ".." ]
  sources = [ "ItaniumABILanguageRuntime.cpp" ]
}


